--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 
 # dependencies
 /node_modules
-/backend-node-mongo/node_modules
+/Backend/node_modules
 
 # profiling files
 chrome-profiler-events*.json
